login/register working

--- a/views/pages/failedSignUp.ejs
+++ b/views/pages/failedSignUp.ejs
@@ -7,8 +7,7 @@
 <body>
 <% include ../partials/nav.ejs %>
 
-
-<p>Failed to login, go back to <a href="login.html">Log In.</a></p>
+<p>Username taken, please <a href="login.html">log in</a> or <a href="login.html">try again.</a></p>
 
 </body>
 </html>
