--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,8 +4,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
-              <li><a href="/signup.html">Sign Up</a></li>
-              <li><a href="/login.html">Log In</a></li>
+              <li><a href="/signup">Sign Up</a></li>
+              <li><a href="/login">Log In</a></li>
               <!-- <li><a href="/dashboard">Dashboard</a></li> -->
           </ul>
 
