--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -3,11 +3,10 @@
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
-    <body class="container">
+    <body class="container" style="background-image: url(http://eskipaper.com/images/vancouver-background-1.jpg)">
         <div class="page-header">
-            <h1>Register</h1>
+                <% include ../partials/nav.ejs %>
         </div>
-        <% include ../partials/nav.ejs %>
 
         <div class="container row">
             <div class="jumbotron col-sm-4 pull-center">
