--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,10 +1,11 @@
+<h1>Monopoly Vancouver</h1>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
-              <li><a href="/signup">Sign Up</a></li>
+              <li><a href="/signup">Register</a></li>
               <li><a href="/login">Log In</a></li>
               <!-- <li><a href="/dashboard">Dashboard</a></li> -->
           </ul>
