pushing to heroku

--- a/views/pages/failedLogin.ejs
+++ b/views/pages/failedLogin.ejs
@@ -8,7 +8,7 @@
 <% include ../partials/nav.ejs %>
 
 
-<p>Failed to login, go back to <a href="login.html">Log In.</a></p>
+<p>Failed to login, go back to <a href="login">Log In.</a></p>
 
 </body>
 </html>
