--- a/views/pages/successfulSignup.ejs
+++ b/views/pages/successfulSignup.ejs
@@ -8,7 +8,7 @@
 
   <% include ../partials/nav.ejs %>
 
-<p>Account created, you can now <a href="login.html">Log In.</a></p>
+<p>Account created, you can now <a href="login">Log In.</a></p>
 
 </body>
 </html>
