--- a/views/pages/failedSignUp.ejs
+++ b/views/pages/failedSignUp.ejs
@@ -7,7 +7,7 @@
 <body>
 <% include ../partials/nav.ejs %>
 
-<p>Username taken, please <a href="login.html">log in</a> or <a href="login.html">try again.</a></p>
+<p>Username taken, please <a href="login">log in</a> or <a href="signup">try again.</a></p>
 
 </body>
 </html>
