--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,15 +3,16 @@
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
-    <body class="container" style="background-image: url(http://eskipaper.com/images/vancouver-background-1.jpg)">
+    <body class="container" style="position: relative; background-image: url(http://eskipaper.com/images/vancouver-background-1.jpg);">
         <div class="page-header">
                 <% include ../partials/nav.ejs %>
         </div>
         
 
 
-        <div class="container row">
-            <div class="jumbotron col-sm-4 pull-center">
+        <div class="container row" style="position: relative">
+            <!-- <div class="jumbotron col-sm-4 pull-center"> -->
+                <div class="jumbotron col-xs-6 col-sm-4 pull-center" style="min-width: 400px">
                 <form action="/login" method="post">
                     <div>
                         <label>Username:</label>
