--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,17 +2,12 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="navbar">
           <ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
               <li><a href="/signup">Register</a></li>
               <li><a href="/login">Log In</a></li>
               <!-- <li><a href="/dashboard">Dashboard</a></li> -->
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
-              <!-- <li><a href="/login">Log In</a></li> -->
-              <!-- <li><a href="/logout">Log Out</a></li> -->
           </ul>
       </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
