--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -26,7 +26,7 @@
 
                         <tr>
                             <td rowspan="4"><img src="/images/1character.png"></td>
-                            <td colspan="3"><b>Money:</b>&nbsp; 345$</td>
+                            <td colspan="3"><b>Money:</b>&nbsp; $345</td>
                         </tr>
 
                         <!-- Third row -->
@@ -39,7 +39,7 @@
                         <!-- Fourth row -->
 
                         <tr>
-                            <td colspan="3"><b>Estate Value:</b>&nbsp; 1248$</td>
+                            <td colspan="3"><b>Estate Value:</b>&nbsp; $1248</td>
                         </tr>
 
                     </table>
