--- a/public/stylesheets/gameboard.css
+++ b/public/stylesheets/gameboard.css
@@ -20,6 +20,18 @@ td {
     width: 95%;
 }
 
+#gameLog {
+	position: absolute;
+	top: 550px;
+	left: 550px;
+	border: 2px solid black;
+	padding-left: 1px;
+	width: 300px;
+	height: 100px;
+	overflow-y: scroll;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-style: italic;
+}
 
 #enlarge-wrap {
 	border: none;
