--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -32,7 +32,7 @@
                         <!-- Third row -->
 
                         <tr>
-                            <td colspan="3"><b>Porperties:</b>&nbsp; 2</td>
+                            <td colspan="3"><b>Properties:</b>&nbsp; 2</td>
                             <td></td>
                         </tr>
 
@@ -155,8 +155,15 @@
         </tr>
     </table>
 
+    <!-- represents the game log in the middle of board -->
     <div id="gameLog">
-        
+    </div>
+    <!-- weather api  -->
+    <p id="weather-text">Current Weather via OpenWeatherMap.org</p>
+    <div id="weather">
+        <div id="description">raining</div>
+        <h1 id="temp">10</h1>
+        <div id="location">Vancouver</div>
     </div>
 </body>
 
@@ -166,7 +173,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/game_logics.js"></script>
+    <script type="text/javascript" src="/js/BingSearch.js"></script>
+    <script type="text/javascript" src="/js/Weather.js"></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/gameboard.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet"> 
     
 </footer>
 
