adding buy/sell/trade buttons and logic for buy/sell

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -155,9 +155,21 @@
         </tr>
     </table>
 
-    <div id="gameLog">
+    <div id="control">
+        <div class="playerOptions-btn-group">
+            <button id="buyButton">Buy</button>
+            <button id="sellButton">Sell</button>
+            <button id="tradeButton">Trade</button>
+        </div>
+
+        <div id="gameLog">
         
-    </div>
+        </div>
+	</div>
+
+    <!-- <div id="gameLog">
+        
+    </div> -->
 </body>
 
 <footer>
@@ -166,6 +178,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/game_logics.js"></script>
+    <!-- <script type="text/javascript" src="/playercontrol.js"></script> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/gameboard.css" />
     
 </footer>
