--- a/public/stylesheets/gameboard.css
+++ b/public/stylesheets/gameboard.css
@@ -20,10 +20,23 @@ td {
     width: 95%;
 }
 
-#gameLog {
+#control {
 	position: absolute;
 	top: 550px;
 	left: 550px;
+	border: 2px solid black;
+	padding: 10px;
+	width: 400px;
+	height: 149px;
+	/* overflow-y: scroll; */
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-style: italic;
+}
+
+#gameLog {
+	position: absolute;
+	/* top: 550px; */
+	/* left: 550px; */
 	border: 2px solid black;
 	padding-left: 1px;
 	width: 300px;
@@ -37,6 +50,12 @@ td {
 	border: none;
 	z-index: 0;
 }
+
+.playerOptions-btn-group button {
+	background-color: #6b5b95; /* purple background */
+	color: white; /* White text */
+	cursor: pointer; /* Pointer/hand icon */
+  }
 
 .cell {
 	position: relative;
