Changed some variable names, removed some unnecessary lines, added some comments

--- a/public/stylesheets/gameboard.css
+++ b/public/stylesheets/gameboard.css
@@ -296,8 +296,7 @@ td {
 }
 
 .grid-col {
-	/* border-color: white; // Uncomment to remove borders
-	*/
+	border-color: white;
 	width: 33%;
 	height: 50%;
 }
