fixing buy/sell

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -156,8 +156,18 @@
     </table>
 
     <!-- represents the game log in the middle of board -->
-    <div id="gameLog">
-    </div>
+    <div id="control">
+            <div class="playerOptions-btn-group">
+                <button id="buyButton">Buy</button>
+                <button id="sellButton">Sell</button>
+                <button id="tradeButton">Trade</button>
+            </div>
+    
+            <div id="gameLog">
+            
+            </div>
+        </div>
+        
     <!-- weather api  -->
     <p id="weather-text">Current Weather via OpenWeatherMap.org</p>
     <div id="weather">
