--- a/public/stylesheets/gameboard.css
+++ b/public/stylesheets/gameboard.css
@@ -19,11 +19,23 @@ td {
     /* float: left; */
     width: 95%;
 }
-
-#gameLog {
+/* for buy/sell/trade box */
+#control {
 	position: absolute;
 	top: 550px;
 	left: 550px;
+	border: 2px solid black;
+	padding: 10px;
+	width: 400px;
+	height: 149px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-style: italic;
+}
+
+#gameLog {
+	position: absolute;
+	/* top: 550px; */
+	/* left: 550px; */
 	border: 2px solid black;
 	padding-left: 1px;
 	width: 300px;
@@ -65,6 +77,13 @@ h1 {
 	border: none;
 	z-index: 0;
 }
+
+/* button color */
+.playerOptions-btn-group button {
+	background-color: #6b5b95; /* purple background */
+	color: white; /* White text */
+	cursor: pointer; /* Pointer/hand icon */
+  }
 
 .cell {
 	position: relative;
