--- a/public/stylesheets/gameboard.css
+++ b/public/stylesheets/gameboard.css
@@ -21,9 +21,9 @@ td {
 }
 /* for buy/sell/trade box */
 #control {
-	position: absolute;
-	top: 550px;
-	left: 550px;
+	position: relative;
+	top: -650px;
+	left: 450px;
 	border: 2px solid black;
 	padding: 10px;
 	width: 400px;
@@ -346,4 +346,16 @@ h1 {
 	border-color: white;
 	width: 33%;
 	height: 50%;
+}
+
+.blinking{
+    animation:blinkingText 1.8s infinite;
+}
+
+@keyframes blinkingText{
+    0%{     color: #000;    }
+    49%{    color: transparent; }
+    50%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
 }
