--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -159,7 +159,7 @@
     <div id="control">
             <div class="playerOptions-btn-group">
                 <button id="buyButton">Buy</button>
-                <button id="sellButton">Sell</button>
+                <button id="sellButton">Mortgage</button>
                 <button id="tradeButton">Trade</button>
             </div>
     
