game_logics fix
Fixed player info not display dynamically

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -10,7 +10,8 @@
         <table id="player_wrapper">
             <tr>
                 <td class="player_status_wrapper">
-                    <table class="player_status">
+                    <div class="blinking" id="player_holder1">Waiting for players ...</div>
+                    <table class="player_status" id="player_1" style="display:none">
 
                         <!-- First row -->
 
@@ -43,11 +44,121 @@
                         </tr>
 
                     </table>
-
                 </td>
-                <td class="blinking">Waiting for players ...</td>
-                <td class="blinking">Waiting for players ...</td>
-                <td class="blinking">Waiting for players ...</td>
+                    
+                <td class="player_status_wrapper" >
+                    <div class="blinking" id="player_holder2">Waiting for players ...</div>
+                    <table class="player_status" id="player_2" style="display:none">
+
+                        <!-- First row -->
+
+                        <tr>
+                            <td><b>Player:</b>&nbsp;
+                                <span id="player_name_2"></span>
+                            </td>
+                            <td colspan="3"><span id="player_color_2"></span></td>
+
+                        </tr>
+
+                        <!-- Second row -->
+
+                        <tr>
+                            <td rowspan="4"><div id="player_picture_2"></div></td>
+                            <td colspan="3"><b>Money:</b>&nbsp; <div id="player_money_2"></div></td>
+                        </tr>
+
+                        <!-- Third row -->
+
+                        <tr>
+                            <td colspan="3"><b>Properties:</b>&nbsp;<div id="player_property_2"></div></td>
+                            <td></td>
+                        </tr>
+
+                        <!-- Fourth row -->
+
+                        <tr>
+                            <td colspan="3"><b>Estate Value:</b>&nbsp; <div id="player_estate_value_2"></div> </td>
+                        </tr>
+
+                    </table>
+                </td>
+                
+ 
+                <td class="player_status_wrapper" >
+                    <span class="blinking" id="player_holder3" >Waiting for players ...</span>
+                    <table class="player_status" id="player_3" style="display:none">
+
+                        <!-- First row -->
+
+                        <tr>
+                            <td><b>Player:</b>&nbsp;
+                                <span id="player_name_3"></span>
+                            </td>
+                            <td colspan="3"><span id="player_color_3"></span></td>
+
+                        </tr>
+
+                        <!-- Second row -->
+
+                        <tr>
+                            <td rowspan="4"><div id="player_picture_3"></div></td>
+                            <td colspan="3"><b>Money:</b>&nbsp; <div id="player_money_3"></div></td>
+                        </tr>
+
+                        <!-- Third row -->
+
+                        <tr>
+                            <td colspan="3"><b>Properties:</b>&nbsp;<div id="player_property_3"></div></td>
+                            <td></td>
+                        </tr>
+
+                        <!-- Fourth row -->
+
+                        <tr>
+                            <td colspan="3"><b>Estate Value:</b>&nbsp; <div id="player_estate_value_3"></div> </td>
+                        </tr>
+
+                    </table>
+                </td>
+                
+                
+                <td class="player_status_wrapper" >
+                    <div class="blinking" id="player_holder4">Waiting for players ...</div>
+                    <table class="player_status" id="player_4" style="display:none">
+
+                        <!-- First row -->
+
+                        <tr>
+                            <td><b>Player:</b>&nbsp;
+                                <span id="player_name_4"></span>
+                            </td>
+                            <td colspan="3"><span id="player_color_4"></span></td>
+
+                        </tr>
+
+                        <!-- Second row -->
+
+                        <tr>
+                            <td rowspan="4"><div id="player_picture_4"></div></td>
+                            <td colspan="3"><b>Money:</b>&nbsp; <div id="player_money_4"></div></td>
+                        </tr>
+
+                        <!-- Third row -->
+
+                        <tr>
+                            <td colspan="3"><b>Properties:</b>&nbsp;<div id="player_property_4"></div></td>
+                            <td></td>
+                        </tr>
+
+                        <!-- Fourth row -->
+
+                        <tr>
+                            <td colspan="3"><b>Estate Value:</b>&nbsp; <div id="player_estate_value_4"></div> </td>
+                        </tr>
+
+                    </table>
+                </td>
+                
             </tr>
         </table>
     </secion>
