--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -2,6 +2,8 @@
     <head>
         <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script type="text/javascript" src="/js/Weather.js"></script>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/login.css" />
     </head>
     <body class="container" style="background-image: url(http://eskipaper.com/images/vancouver-background-1.jpg)">
         <div class="page-header">
@@ -25,5 +27,14 @@
                 </form>                  
             </div>          
         </div>
+        <!-- weather api  -->
+        <div id="weather-wrapper">
+                <p id="weather-text">Current Weather via OpenWeatherMap.org</p>
+                <div id="weather">
+                    <div id="description">raining</div>
+                    <h1 id="temp">10</h1>
+                    <div id="location">Vancouver</div>
+                </div>
+            </div>
     </body>
 </html>
