--- a/public/stylesheets/gameboard.css
+++ b/public/stylesheets/gameboard.css
@@ -79,6 +79,24 @@ h1 {
 	z-index: 0;
 }
 
+#chanceCards {
+	position: relative;
+	top: -550px;
+	left: 0px;
+	/* width: 300px;
+	height: 100px; */
+}
+
+#propertyList{
+	display: none;
+	width: 200px;
+	size: 200px;
+}
+#propertyListSection{
+	position: relative;
+	left: 100px;
+	top: -100px;
+}
 /* button color */
 .playerOptions-btn-group button {
 	background-color: #6b5b95; /* purple background */
