adding rent function

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -282,6 +282,7 @@
                 <button id="buyButton">Buy</button>
                 <button id="sellButton">Mortgage</button>
                 <button id="tradeButton">Trade</button>
+                <button id="resignButton">Resign</button>
             </div>
     
             <div id="gameLog">
