fixed big dice roll bug, added end game function, mortgaging works, added end turn functionality

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <secion class="player_info">
+    <section class="player_info">
         <table id="player_wrapper">
             <tr>
                 <td class="player_status_wrapper">
@@ -162,8 +162,9 @@
                 
             </tr>
         </table>
-    </secion>
+    </section>
 
+    <div><h2 id="endGame" style="text-align: center; display: none"></h2></div>
     <table id="board">
         <tr>
             <td class="cell board-corner" id="cell20"></td>
@@ -281,8 +282,9 @@
             <div class="playerOptions-btn-group">
                 <button id="buyButton">Buy</button>
                 <button id="sellButton">Mortgage</button>
-                <button id="tradeButton">Trade</button>
+                <!-- <button id="tradeButton">Trade</button> -->
                 <button id="resignButton">Resign</button>
+                <button id="endTurnButton">End Turn</button>
             </div>
     
             <div id="gameLog">
