--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -4,6 +4,7 @@
     <title>Monopoly Vancouver</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <script type="text/javascript" src="/js/BingSearch.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -323,6 +324,17 @@
             </tr>
         </Table>
     </section>
+    <div id="chatBox">
+        <div id="messageDisplay">
+            <ul id="messages"></ul>
+        </div>
+        <div id="enterMessage">
+            <form action="/" method="POST" id="chatForm">
+            <input id="txt" autocomplete="off" autofocus="on" placeholder="say something..." /><button>Send</button>
+            </form>
+
+        </div>
+    </div>
 </body>
 
 <footer>
@@ -334,7 +346,6 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/gameboard.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/stylesheets/chance.css" />
-    
 </footer>
 
 </html>
