Implemented and integrated jail logic with dice rolling

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -235,7 +235,7 @@
                         </div>
                         <div class="col-6">
                             <div class="text-center py-2" style="position:relative; right:23em; bottom:7em;">
-                                <button type="button" id="throw" class="btn btn-primary" disabled="true" onclick="throwDice()">Throw!</button>
+                                <button type="button" id="throw" class="btn btn-primary" disabled="true">Throw!</button>
                             </div>
                         </div>
                         <div class="col">
@@ -285,6 +285,7 @@
                 <!-- <button id="tradeButton">Trade</button> -->
                 <button id="resignButton">Resign</button>
                 <button id="endTurnButton">End Turn</button>
+                <button id="leaveJail">Pay fine</button>
             </div>
     
             <div id="gameLog">
